--- a/style.css
+++ b/style.css
@@ -1,55 +1,41 @@
-body
-{
-    background-size: cover;
-}
 
-#h1
+.heading
 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-style: italic;
-    border-radius: 5px;
-    width: 100%;
-    margin-top: 2px;
+width: 100%;
+text-align: left;
 }
-
-.heading h3
-{
+.heading h3{
     display: inline;
 }
 
-.heading button
-{
+.heading button{
     float: right;
     border: 1px solid white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 15px;
 }
 
-#status
+#start ,#status, #restart
 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 23px;
-    font-style: italic;
+font-size: 22px;
 }
 
-#h2
+.modal-dialog
 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-style: italic;
-    font-size: 20px
+    width: 70%;
 }
-
 .modal-body
 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-style: italic;
-    font-size: 15px;
+    text-align: left;
+    font-size: 20px;
 }
-
-canvas
+h4
 {
-    border: 2px solid white;
-    border-radius: 10px;
-    margin-top: 100px;
-    box-shadow: 5px 5px 5px grey;
+   background-color: grey;
+   color:white;
+   line-height: 2;
 }
+canvas 
+  {
+      border:3px solid white;
+      border-radius: 20px;
+      box-shadow:  5px 5px 5px white;
+  }
